--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bulma": "^0.8.2",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react": "^16.13.1",
+    "react-router-dom": "^5.1.2"
   }
 }
